# agg-2.6

./: CMakeLists.txt  conanfile.py  configure.ac
.github/workflows/: ci-cmake.yml  ci-conan.yml
agg-src/: CMakeLists.txt
agg-src/examples/: CMakeLists.txt
agg-src/font_freetype/: CMakeLists.txt
agg-src/font_win32_tt/: CMakeLists.txt
agg-src/gpc/: CMakeLists.txt
agg-src/myapp/: CMakeLists.txt
agg-src/src/: CMakeLists.txt
agg-src/src/ctrl/: CMakeLists.txt
agg-src/src/platform/: CMakeLists.txt
agg2d/: CMakeLists.txt
cmake/: agg-config.cmake.in
examples/: CMakeLists.txt
font_freetype/: CMakeLists.txt  agg_font_freetype2.cpp
gpc/: CMakeLists.txt
include/: agg_trans_affine.h
myapp/: CMakeLists.txt  agg2d_demo.cpp  myproject.cmake
src/: CMakeLists.txt
src/ctrl/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/X11/: CMakeLists.txt
src/platform/mac/: CMakeLists.txt
src/platform/win32/: CMakeLists.txt
test_package/: CMakeLists.txt
