PROJECT( freetypefont )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

FIND_PACKAGE( Freetype CONFIG REQUIRED )

ADD_LIBRARY( ${PROJECT_NAME} STATIC
        agg_font_freetype.h
        agg_font_freetype.cpp)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC freetype antigrain )
TARGET_COMPILE_DEFINITIONS( ${PROJECT_NAME} PUBLIC AGG_USE_FREETYPE )

ADD_LIBRARY( antigrain::freetypefont ALIAS ${PROJECT_NAME} )
TARGET_LINK_LIBRARIES( antigrain_internal INTERFACE antigrain::freetypefont )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/agg_font_freetype.h DESTINATION agg/font_freetype )
