PROJECT( gpcbool )

CMAKE_MINIMUM_REQUIRED( VERSION 3.13 )

# boolean operations library GPC

ADD_LIBRARY( ${PROJECT_NAME} STATIC
    gpc.c
    gpc.h
)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
TARGET_COMPILE_DEFINITIONS( ${PROJECT_NAME} PUBLIC AGG_USE_GPC )

ADD_LIBRARY( antigrain::gpcbool ALIAS ${PROJECT_NAME})
TARGET_LINK_LIBRARIES( antigrain_internal INTERFACE antigrain::gpcbool )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES gpc.h DESTINATION agg/gpc )
