PROJECT( freetypefont )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

FIND_PACKAGE( Freetype CONFIG REQUIRED )

ADD_LIBRARY( ${PROJECT_NAME}
        agg_font_freetype.h
        agg_font_freetype.cpp)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC freetype antigrain )
TARGET_LINK_LIBRARIES( antigrain INTERFACE ${PROJECT_NAME} )

TARGET_COMPILE_DEFINITIONS( ${PROJECT_NAME} PUBLIC AGG_USE_FREETYPE )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/agg_font_freetype.h DESTINATION agg/font_freetype )
