PROJECT( agg_font_win32 )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

ADD_LIBRARY( ${PROJECT_NAME} STATIC
        agg_font_win32_tt.h
        agg_font_win32_tt.cpp)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC antigrain )

ADD_LIBRARY( antigrain::font_win32 ALIAS ${PROJECT_NAME})
TARGET_LINK_LIBRARIES( antigrain_internal INTERFACE antigrain::font_win32 )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/agg_font_win32_tt.h DESTINATION agg/font_win32_tt )
