PROJECT( gpcbool )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

# boolean operations library GPC

ADD_LIBRARY( ${PROJECT_NAME}
    gpc.c
    gpc.h
)

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )

TARGET_COMPILE_DEFINITIONS( ${PROJECT_NAME} PUBLIC AGG_USE_GPC )
TARGET_LINK_LIBRARIES( antigrain INTERFACE ${PROJECT_NAME} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PRIVATE antigrain )


INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES gpc.h DESTINATION agg/gpc )
